fix word wrap

--- a/frontend/src/components/DonePetition/DonePetition.scss
+++ b/frontend/src/components/DonePetition/DonePetition.scss
@@ -21,6 +21,7 @@ body[scheme="space_gray"] {
 
   &__title {
     word-break: break-all;
+    word-break: break-word;
   }
 
   &__fixed-layout {
